deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service-api
  template:
    metadata:
      labels:
        app: patient-service-api
    spec:
      containers:
        - name: patient-service-api-container
          image: patient-service-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
