service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service-api-service
  labels:
    app: iit-nginx-app
spec:
  selector:
    app: patient-service-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
  type: ClusterIP
