ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: meditrack-patient-records.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: patient-service-service
                port:
                  number: 3000
